--- a/opal_modules/Gemfile
+++ b/opal_modules/Gemfile
@@ -1,2 +1,3 @@
+source "https://rubygems.org"
 gem 'opal', github: 'janbiedermann/opal', branch: 'es6_modules_1_1'
 gem 'opal-webpack-loader', '>= 0.9.6'
